Updated count endpoint to always return full count
