# app/server/app/routes/attains.js
@@ -312,7 +312,6 @@ function parseCriteria(req, query, profile, queryParams, countOnly = false) {
       : null;
 
   // build select statement of the query
-  let selectText = undefined;
   if (!countOnly) {
     // filter down to requested columns, if the user provided that option
     const columnsToReturn = [];
@@ -326,11 +325,11 @@ function parseCriteria(req, query, profile, queryParams, countOnly = false) {
     // build the select query
     const selectColumns =
       columnsToReturn.length > 0 ? columnsToReturn : profile.columns;
-    selectText = selectColumns.map((col) =>
+    const selectText = selectColumns.map((col) =>
       col.name === col.alias ? col.name : `${col.name} AS ${col.alias}`,
     );
+    query.select(selectText).orderBy('objectid', 'asc');
   }
-  query.select(selectText).orderBy('objectid', 'asc');
 
   // build where clause of the query
   profile.columns.forEach((col) => {
@@ -374,7 +373,7 @@ async function executeQuery(profile, req, res) {
     parseCriteria(req, query, profile, queryParams);
 
     // Check that the query doesn't exceed the MAX_QUERY_SIZE.
-    if ((await checkQueryCount(query)) === null) {
+    if ((await query.clone().count().first()).count > maxQuerySize) {
       return res.status(200).json({
         message: `The current query exceeds the maximum query size. Please refine the search, or visit ${process.env.SERVER_URL}/national-downloads to download a compressed dataset`,
       });
@@ -429,27 +428,6 @@ function validateQueryParams(queryParams, profile) {
 }
 
 /**
- * Counts the number of rows returned be a specified
- * query without modifying the query object
- * @param {Object} query KnexJS query object
- * @returns {Object | null} object with 'count' property, or null if limit exceeded
- */
-async function checkQueryCount(query) {
-  const count = await knex
-    .from(
-      query
-        .clone()
-        .limit(maxQuerySize + 1)
-        .as('q'),
-    )
-    .count()
-    .first();
-
-  if (count.count > maxQuerySize) return null;
-  return count.count;
-}
-
-/**
  * Runs a query against the provided profile name and returns the number of records.
  * @param {Object} profile definition of the profile being queried
  * @param {express.Request} req
@@ -468,15 +446,12 @@ function executeQueryCountOnly(profile, req, res) {
 
     parseCriteria(req, query, profile, queryParams, true);
 
-    checkQueryCount(query).then((count) => {
-      if (count === null) {
-        res.status(200).json({
-          message: `The current query exceeds the maximum query size. Please refine the search, or visit ${process.env.SERVER_URL}/national-downloads to download a compressed dataset`,
-        });
-      } else {
-        res.status(200).json({ count });
-      }
-    });
+    query
+      .count()
+      .first()
+      .then(({ count }) => {
+        res.status(200).json({ count, sizeExceeded: count > maxQuerySize });
+      });
   } catch (error) {
     log.error(
       formatLogMsg(
